@@ -11,6 +11,7 @@ SVN
 -bug: ICMP fails on some platforms
 -bug: MySQL client auto reconnect default in MySQL 5.0.71 causes spine to crash
 -bug: Inconsistent behavior when the poller interval has not been set
+-feature:0001550: Record the polling time for each host to optimize polling times
 
 0.8.7e
 -bug: Not all configuration paths are searched for spine.conf
