@@ -64,6 +64,7 @@ Cacti CHANGELOG
 -feature#0001450: Template import script
 -feature#0001525: add rebuild_poller_cache --host-id=[ID]
 -feature#0001542: Rewriting SNMP values of data queries
+-feature:0001550: Record the polling time for each host to optimize polling times
 -feature: jQuery "TableDnd" used for cdef item sort (courtesy Browniebraun)
 -feature: jQuery "TableDnd" for Graph Template Item
 -feature: jQuery "TableDnd" for Data Queries Suggested Values
